PRJ_VER=1.4.11
SUMMARY=Use GSettings instead of GConf2; MakerDialog no longer invoke GUI on startup.
REDHAT_BUGZILLA=902866,1119963
[Changes]
- MakerDialog dialog 
- github is now hosting the ibus-chewing tarballs.
- Fixed Bug 902866 - ibus-chewing uses dconf but still installs gconf schemas
  (Also listed as GitHub ibus-chewing #36)
- Resolves Bug 1013977 - Slow focus change with ibus-chewing
    Fixed github issue #45: Optimize properties handling.
    Thanks Ueno.
- Fixed github issue #43: First space not able to input
    Thanks FreedomKnight.
- Fixed github issue #44: Update input-events (for libchewing-0.4.0)
    Thanks hiunnhue.
